Add footer and back link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="header-bar">
+            <a class="back-link" href="https://menu-formularios-la-tata.vercel.app/">← Volver al menú</a>
+        </div>
         <h1>FORMULARIO DE INVENTARIO DE PRODUCTO TERMINADO DE LA TATA DE LA LIBERTAD</h1>
     </header>
 
@@ -115,5 +118,8 @@
 
     <datalist id="productos-datalist"></datalist>
     <script src="script.js"></script>
+    <footer class="site-footer">
+        Elaborado por el pasante de producción Gerardo Siblesz
+    </footer>
 </body>
 </html>
