Add LA GUAIRA sede option

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                             <option value="SAMBIL LA CANDELARIA">SAMBIL LA CANDELARIA</option>
                             <option value="SAMBIL CHACAO">SAMBIL CHACAO</option>
                             <option value="BELLO CAMPO">BELLO CAMPO</option>
+                            <option value="LA GUAIRA">LA GUAIRA</option>
                         </select>
                     </label>
                     <label>Responsable
